@@ -497,6 +497,7 @@ AC_ARG_ENABLE(all-filters,
 # ======= START section: ENABLE INDIVIDUAL FILTERS =============================
 # ==============================================================================
 SNOOPY_CONFIGURE_FILTER_ENABLE( [exclude_spawns_of], [This filter drops messages that originate for specified process trees.])
+SNOOPY_CONFIGURE_FILTER_ENABLE( [exclude_comm],      [This filter drops messages that match given command.])
 SNOOPY_CONFIGURE_FILTER_ENABLE( [exclude_uid],       [This filter drops messages that match given UIDs.])
 SNOOPY_CONFIGURE_FILTER_ENABLE( [only_root],         [This filter passes only messages generated by root.])
 SNOOPY_CONFIGURE_FILTER_ENABLE( [only_tty],          [This filter passes only messages that have a TTY != none.])
